maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: not enough arguments for method getIndication: (x: Int, y: Int)Int.
Unspecified value parameters x, y.
      if(getIndication()==k){
                      ^ShortestPathMaze:22: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
        if(aMurNord()){
                   ^ShortestPathMaze:24: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
        }else if(aMurOuest()) {
                          ^